--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
+
+
 	<canvas id="my-canvas" width="700" height="400"></canvas>
 
+	<aside id="scoreboard">
+		<h1>Scoreboard</h1>
+	</aside>
 
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
