Cleaned up code and added determine Winner function

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<h1>Scoreboard</h1>
 	</aside>
 
+	<div id="modal"></div>
+
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
