--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
 	<aside id="scoreboard">
 		<h1>Scoreboard</h1>
+		<div></div>
+		<div></div>
 	</aside>
 
-	<div id="modal"></div>
+
 
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
