Added Styling to the scoreboard

--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 
 	<canvas id="my-canvas" width="700" height="400"></canvas>
 
+
+
 	<aside id="scoreboard">
 		<h1>Scoreboard</h1>
-		<div></div>
-		<div></div>
+
+		<h3>Rules:
+			<h4>First bike to the other side wins!</h4>
+		</h3>
+		<div id="player-one">Player One
+		<ul>Race Wins:</ul>	
+		</div>
+		<div id="player-two">Player Two
+	<ul>Race Wins:</ul>
+		</div>	
+
 	</aside>
+
+	<section></section>
 
 
 
