Winner can be determined

--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
 
 		<h3>Rules:
 			<h4>First bike to the other side wins!</h4>
+			<h4>First player to win three rounds wins game!</h4>
 		</h3>
 		<div id="player-one">Player One
-		<ul>Race Wins:</ul>	
+		<ul id="race-wins-1">Race Wins:</ul>	
 		</div>
 		<div id="player-two">Player Two
-	<ul>Race Wins:</ul>
-		</div>	
+		<ul id="race-wins-2">Race Wins:</ul>
+		</div>
+
+		<div id="winner"></div>	
 
 	</aside>
 
-	<section></section>
+	<section id="timer"></section>
 
 
 
