Added controls button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 	<aside id="scoreboard">
 		<h1>Scoreboard</h1>
 
+		<button id="modalBtn" class="button">Controls</button>
+
+		<div id="simpleModal" class="modal">
+			<div class="modal-content">
+			<span class="closeBtn">&times;</span>
+			<p>Player One Controls: Use arrows(left,right,up,down)</p>
+
+			<p>Player Two Controls: Use w,a,s,d</p>
+			</div>
+		</div>
+
+	
 		<h3>Rules:
 			<h4>First bike to the other side wins!</h4>
 			<h4>First player to win three rounds wins game!</h4>
@@ -32,9 +44,13 @@
 
 	</aside>
 
+
+
 	<section id="timer"></section>
 
 
+
+		
 
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
