Added modal for winner annoucement

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
 			</div>
 		</div>
 
+		<div id="simpleModal" class="modal1">
+			<div class="modal-content">
+			<span class="closeBtn">&times;</span>
+			<p>Player One Wins Game!</p>
+	
+			</div>
+		</div>
+
+		<div id="simpleModal" class="modal2">
+			<div class="modal-content">
+			<span class="closeBtn">&times;</span>
+			<p>Player Two Wins Game!</p>
+	
+			</div>
+		</div>
+
 	
 		<h3>Rules:
 			<h4>First bike to the other side wins!</h4>
