--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 
 
+
+
 	<canvas id="my-canvas" width="700" height="400"></canvas>
 
 
@@ -48,6 +50,7 @@
 
 	
 		<h3>Rules:
+			<h4>Two Player Game</h4>
 			<h4>First bike to the other side wins!</h4>
 			<h4>First player to win three rounds wins game!</h4>
 		</h3>
