Cleaned up code and added Play Again button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<canvas id="my-canvas" width="700" height="400"></canvas>
 
 
-
 	<aside id="scoreboard">
 		<h1>Scoreboard</h1>
 
@@ -46,6 +45,8 @@
 			<p>Player Two Wins Game!</p>
 	
 			</div>
+
+
 		</div>
 
 	
@@ -66,13 +67,11 @@
 	</aside>
 
 
-
-
 	<section id="timer"></section>
 
 
-
-		
+	<input type="button" value="Play Again" onClick="refresh" id="refresh">
+	
 
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
