Moved play again button

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<section id="timer"></section>
 
 
-	<input type="button" value="Play Again" onClick="refresh" id="refresh">
+	<input type="button" value="Play Again" onClick="window.location.reload()" id="refresh">
 	
 
 	<script type="text/javascript" src="js/app.js"></script>
