--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 	<title>Bike Race</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
 </head>
 <body>
 
-
-
-
-
 	<canvas id="my-canvas" width="700" height="400"></canvas>
-
 
 	<aside id="scoreboard">
 		<h1>Scoreboard</h1>
@@ -25,9 +19,9 @@
 		<div id="simpleModal" class="modal">
 			<div class="modal-content">
 			<span class="closeBtn">&times;</span>
-			<p>Player One Controls: Use arrows (left, right, up, down)</p>
+			<p>Player One Controls: Arrows (left, right, up, down)</p>
 
-			<p>Player Two Controls: Use w, a, s, d</p>
+			<p>Player Two Controls: w, a, s, d</p>
 			</div>
 		</div>
 
@@ -45,8 +39,6 @@
 			<p>Player Two Wins Game!</p>
 	
 			</div>
-
-
 		</div>
 
 	
@@ -69,10 +61,8 @@
 
 	<section id="timer"></section>
 
-
-	<input type="button" value="Play Again" onClick="window.location.reload()" id="refresh">
+	<input type="button" value="Play Again" onClick="window.location.reload()" id="r efresh">
 	
-
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
